--- a/css/reset.css
+++ b/css/reset.css
@@ -43,7 +43,10 @@ table {
 	border-spacing: 0;
 }
 
-a {text-decoration: none;}
+a {
+	text-decoration: none;
+	color:white;	
+}
 a { text-decoration:none !important }
 a:hover { text-decoration:none !important }
 a:visited { color:white; }
