--- a/css/reset.css
+++ b/css/reset.css
@@ -45,8 +45,7 @@ table {
 
 a {
 	text-decoration: none;
-	color:white;	
-}
-a { text-decoration:none !important }
+	color:white;
+	text-decoration:none !important }
 a:hover { text-decoration:none !important }
 a:visited { color:white; }
